CMMP/test/SemanticError/03_WrongNumberParam.c
void test(int64_t a){}

void main() {
    test();
}
